Fix tags corners on mobile

--- a/src/static/less/page.less
+++ b/src/static/less/page.less
@@ -227,7 +227,7 @@ body {
 		&:after {
 			content:"";
 			position:absolute;
-			bottom:0;
+			bottom: -1px;
 			border-style:solid;
 			border-width:0.3em;
 		}
